# starweave

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/starweave/: __init__.py  ascii_art.py  batch.py  cli.py  gallery.py  layers.py  minify.py  morph.py  naming.py  options.py  palette.py  palette_preview.py  render.py  scene.py  sonify.py  svg.py  themes.py  validate.py  webexport.py  world.py
tests/: test_sonify.py  test_starweave.py  test_v040.py  test_v050.py  test_v060.py  test_world.py
web/: explorer.html
