[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "starweave-cli"
version = "0.3.0"
description = "Generate deterministic, animated SVG space posters from seed phrases."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Sebastian Forbes" }
]
keywords = ["svg", "generative-art", "cli", "space", "poster", "deterministic", "animation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
starweave = "starweave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
starweave = ["py.typed"]

